# diting

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  blacklist.txt  fastmcp.json  go.mod  go.sum  install.sh  pyproject.toml  run_test.py  server.py
.github/workflows/: ci.yml  release.yml
cmd/diting/: bench.go  bench_test.go  config.go  config_test.go  cost.go  cost_test.go  doctor.go  doctor_test.go  init.go  init_test.go  logger_test.go  main.go  output.go  output_test.go  resolve.go  resolve_test.go  wire.go  wire_test.go
config/: categories.json
diting/: __init__.py  __main__.py  config.py  log.py  models.py  server.py
diting/data/: blacklist.txt  domain_authority.json
diting/fetch/: __init__.py  archive.py  base.py  browser_driver.py  cache.py  cached.py  composite.py  content_validator.py  jina_reader.py  local.py  tavily.py
diting/llm/: client.py  prompts.py
diting/modules/: __init__.py  arxiv.py  baidu.py  base.py  bing.py  brave.py  duckduckgo.py  github.py  manifest.py  playwright_base.py  serp.py  stackexchange.py  wikipedia.py  x.py  zhihu.py
diting/pipeline/: __init__.py  blacklist.py  classifier.py  dedup.py  evaluator.py  health.py  orchestrator.py  prefilter.py  quality.py  scorer.py  semantic_dedup.py  snippet_aggregator.py  summarizer.py
diting/prompts/: quality_evaluation.md  query_generation.md  scoring.md  summarization.md
diting/rerank/: __init__.py  bge.py  embedder.py
diting/routing/: __init__.py  decision_log.py  embedding_router.py  strategy.py
docs/: architecture.md  benchmark.md  modules.md
docs/adr/: 0001-utls-fetch-layer.md  0002-universal-content-extraction.md  README.md
docs/bench/: HANDOFF.md  audit_queries_prompt.md  generate_fetch_urls_prompt.md  generate_queries_prompt.md
examples/: scorer.yaml
internal/bench/: doc.go  harness_e2e_test.go  loader.go  loader_test.go  report.go  report_test.go  runner.go  runner_test.go  scoring.go  scoring_test.go  types.go  validate.go  validate_test.go
internal/config/: config.go  config_test.go  init.go  init_test.go  validate.go
internal/doctor/: doctor.go  doctor_test.go  lookpath.go
internal/fetch/: chain.go  chain_test.go  (+2 more)
prompts/: classification.md  quality_evaluation.md  query_generation.md  scoring.md  summarization.md
tests/: test_archive.py  test_arxiv.py  test_auto_blacklist.py  test_baidu.py  test_benchmark_core.py  test_bing.py  test_blacklist.py  test_brave.py  test_browser_driver.py  test_cached_fetcher.py  test_classifier.py  test_composite_fetcher.py  test_config.py  test_content_cache.py  test_content_validator.py  test_decision_log.py  test_dedup.py  test_duckduckgo.py  test_embedder.py  test_embedding_router.py  test_evaluator.py  test_fetch.py  test_github.py  test_jina_reader.py  test_llm_client.py  test_local_fetcher.py  test_log.py  test_models.py  test_modules_base.py  test_orchestrator.py  test_pipeline_health.py  test_prefilter.py  test_prompts.py  test_quality.py  test_scorer.py  test_semantic_dedup.py  test_serp.py  test_server.py  test_snippet_aggregator.py  test_stackexchange.py  (+4 more)
(+161 files in other folders)
