[project]
name = "diting"
version = "1.0.0"
description = "Deep aggregated search MCP service"
license = "GPL-3.0-or-later"
authors = [{ name = "s1n" }]
keywords = ["mcp", "search", "aggregation", "llm"]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "curl_cffi>=0.7",
    "fastmcp>=3.0",
    "httpx>=0.27",
    "markdownify>=0.14",
    "playwright>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "readability-lxml>=0.8",
    "trafilatura>=2.0",
]

[project.urls]
Repository = "https://github.com/s1n/diting"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
