[project]
name = "diting"
version = "1.0.0"
description = "Deep aggregated search MCP service"
license = "GPL-3.0-or-later"
authors = [{ name = "s1n" }]
keywords = ["mcp", "search", "aggregation", "llm"]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "curl_cffi>=0.7",
    "fastmcp>=3.0",
    "httpx>=0.27",
    "markdownify>=0.14",
    "playwright>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "readability-lxml>=0.8",
    "trafilatura>=2.0",
]

[project.urls]
Repository = "https://github.com/s1n/diting"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
rerank = [
    "huggingface-hub>=0.23",
    "numpy>=1.26",
    "onnxruntime>=1.18",
    "sentencepiece>=0.2",
    "transformers>=4.43",
]
benchmark = [
    "beir>=2.0",
    "C_MTEB>=1.1",
    "mteb>=2.12",
    "sentence-transformers>=3.0",
]
stealth = [
    # patchright is a drop-in Playwright fork that strips automation
    # fingerprints (navigator.webdriver, CDP markers, enable-automation
    # flags) to bypass Cloudflare / DataDome / PerimeterX detection.
    # Enabled via ENABLE_STEALTH_BROWSER=true at runtime.
    "patchright>=1.55",
]

[project.scripts]
diting = "diting.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["diting/data/*"]

[tool.hatch.build.targets.wheel]
packages = ["diting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
